<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PandaList</string>
    <string name="postings">Postings</string>
    <string name="post_detail">Post Details</string>
    <string name="title_section1">Listings</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Listing View soon...</string>
    <string name="type">Type</string>
    <string name="deliveryMethod">Delivery Method</string>
    <string name="category">Category</string>
    <string name="sub_category">Subcategory</string>
    <string name="gcm_sender_id">338135990728</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="text_sign_in">Sign in</string>
    <string name="text_sign_in_google">Google Sign in</string>
    <string name="pick_account">Please select an account to login</string>

    <string name="login_progress_signing_in">Signing in&#8230;</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="cd_post_image">Post image</string>
    <string name="price">Price $%s</string>

</resources>
