<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:background="@drawable/bg_bamboo"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_image"
        android:layout_centerHorizontal="true"
        android:src="@drawable/panda"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/text_sign_in"
        android:imeOptions="actionUnspecified"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"

        android:singleLine="true" />

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:orientation="horizontal"
        android:gravity="center" >

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="?android:attr/selectableItemBackground"
            android:textColor="@color/white"
            android:background="@drawable/hollow_button"

            android:text="@string/text_sign_in" />

        <Button
            android:id="@+id/btnSignInWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/sign_in_button"
            android:background="@drawable/hollow_button"
            android:padding="8dip"
            style="?android:attr/selectableItemBackground"
            android:textColor="@color/white"
            android:text="@string/text_sign_in_google" />
    </LinearLayout>
</RelativeLayout>